--- a/pintos_1.html
+++ b/pintos_1.html
@@ -30,7 +30,7 @@
 <H1> 1. Introduction </H1>
 <!--docid::SEC1::-->
 <P>
-<b>Pintos</b>의 세계에 오신 것을 환영합니다. Pintos는 80x86 architecture의 CPU를 위한 간단한 Operating System 입니다. 이 OS는 커널 쓰레드, 사용자 프로그램 (어플리케이션), 파일 시스템을 지원하기 위해 아주 간략하게 구현되어 있습니다. 이 프로젝트를 통해 당신 (그리고 당신의 팀)은 앞서 언급된 세 가지 기능을 강화시켜야 합니다. 또한, Virtual Memory를 구현하게 될 것입니다.
+<b>Pintos</b>의 세계에 오신 것을 환영합니다. Pintos는 80x86 architecture의 CPU를 위한 간단한 Operating System 입니다. 이 OS는 커널 쓰레드, 사용자 프로그램 (어플리케이션), 파일 시스템을 지원하기 위해 아주 간략하게 구현되어 있습니다. 이 프로젝트를 통해 여러분(그리고 여러분의 팀메이트)은 앞서 언급된 세 가지 기능을 강화시켜야 합니다. 또한, Virtual Memory를 구현하게 될 것입니다.
 </P>
 <P>
 
